adding dark mode to website

--- a/src/input.css
+++ b/src/input.css
@@ -7,13 +7,12 @@ body {
 }
 
 .navbar-fixed{
-    @apply fixed z-[9999] bg-white bg-opacity-80;
-    backdrop-filter: blur(5px);
+    @apply fixed z-[9999] bg-white bg-opacity-80 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
     box-shadow: inset 0px -1px 0 0 rgba(0,0,0,0.2)
 }
 
 .hamburger-line{
-    @apply w-[30px] h-[2px] bg-dark block my-2;
+    @apply w-[30px] h-[2px] bg-dark block my-2 dark:bg-white;
 }
 
 #hamburger.hamburger-active > span:nth-child(1) {
@@ -24,4 +23,8 @@ body {
 }
 #hamburger.hamburger-active > span:nth-child(3) {
     @apply -rotate-45 
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3
 }
